# rss-scrape

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  db.py  main.py  models.py
app/scraper/: __init__.py  base.py  registry.py
app/scraper/sites/: __init__.py  bbc.py  bild.py  dw.py  spiegel.py
